# krp_python_telemetry

./: LICENSE.md  Logdata Essay mini60 2023-10-31.csv  Logdata Essay short mini60 2023-11-19.csv  README.md  essai.py  pyproject.toml  requirements.autogen.txt  telemetry.ipynb
krp_dash_telemetry/: main.py  utils.py
krp_python_telemetry/: main.py  requirements.txt  telemetry.py  utils.py
